/***********************************************************************
X3 ChangeLog

2009-09-22  Neil Spierling  <sirvulcan@sirvulcan.co.nz>

	* Srvx sync. Author: Michael Poole.

	* src/recdb.c (explain_failure): When MAIN_LOG is NULL, report to stderr.

2009-09-19  Neil Spierling  <sirvulcan@sirvulcan.co.nz>

	* Srvx sync. Author: Michael Poole.

	* src/chanserv.c (handle_part): Allow the current user to be considered for
	channels other than the channel being /part'ed.

	* src/modcmd.c (modcmd_saxdb_write): Write bot modes to the database.
	(modcmd_load_bots): Read them out and use them.

	* src/opserv.c (cmd_whois): Use irc_user_mode_chars() here too.

	* src/opserv.help (INVITE): Document this command.

	* src/proto.h (irc_user_modes): Declare.
	(irc_user_mode_chars): Likewise.

	* src/proto-common.c (irc_user_modes): Define.

	* src/proto-p10.c (irc_user_mode_chars): Define.
	(irc_user): Use irc_user_mode_chars() instead of open-coding it.

2009-08-21  Matthew Beeching  <jobe@mdbnet.co.uk>

	* src/nickserv.c: Fix for a crash bug when using LOC with LDAP
	where LDAP account exists and AuthServ account does not

2009-08-20  Matthew Beeching  <jobe@mdbnet.co.uk>

	* src/opserv.help: Fixed a typo in ROUTING EXAMPLE

2009-08-17  Matthew Beeching  <jobe@mdbnet.co.uk>

	* src/nickserv.c: Added NSMSG_RECLAIM_HOWTO describing how to
	AUTH when warned that the nick being used is registered

2009-08-11  Matthew Beeching  <jobe@mdbnet.co.uk>

	* src/proto.h: Added declaration fo irc_privmsg_user

	* src/opserv.c: Added privmsg and notice trace actions

	* src/opserv.help: Added privmsg and notice trace actions

2009-08-11  Matthew Beeching  <jobe@mdbnet.co.uk>

	* src/proto-p10.c: ignore SPAMFILTER messages

2009-08-11  Neil Spierling  <sirvulcan@sirvulcan.co.nz>

	* Srvx sync. Author: Michael Poole.

	* configure.in: (HAVE_SOCKADDR_SA_LEN): Define to a non-empty value
	(specifically, 1).
	(HAVE_STRUCT_ADDRINFO): Likewise.
