@@ -1,6 +1,10 @@
 /***********************************************************************
 X3 ChangeLog
 
+2009-10-05  Henrik Stuart <evilnet@hstuart.dk>
+
+	* src/main-common.c: Initialise opserv before other services.
+
 2009-09-22  Neil Spierling  <sirvulcan@sirvulcan.co.nz>
 
 	* Srvx sync. Author: Michael Poole.
